src/objects/Litigation__c.object
<CustomObject>
    <description>Legal Management</description>
    <fields>
        <fullName>Adjuster_Email__c</fullName>
        <description>Email for Adjuster</description>
        <label>Adjuster Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attorney_Fees__c</fullName>
        <label>Attorney Fees</label>
        <summarizedField>Litigation_Transaction__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Litigation_Transaction__c.Payment_Type__c</field>
            <operation>equals</operation>
            <value>Litigation Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>Litigation_Transaction__c.Litigation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <description>Internal Case Number</description>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Court_Location__c</fullName>
        <description>Court Location</description>
        <label>Court Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Name__c</fullName>
        <label>Court Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defense_Attorney_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defense Attorney Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Litigation (Defense Attorney Name)</relationshipLabel>
        <relationshipName>Matters3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defense_Firm_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defense Firm Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Litigation (Defense Firm Name)</relationshipLabel>
        <relationshipName>Matters3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of Case Details.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Docket_Number__c</fullName>
        <label>Docket Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchy</label>
        <referenceTo>rkl__RK_Hierarchy_Node__c</referenceTo>
        <relationshipLabel>Litigation</relationshipLabel>
        <relationshipName>Litigation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_House_Attorney__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>In-House Attorney</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Litigation (In-House Attorney)</relationshipLabel>
        <relationshipName>Litigation_as_Attorney</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litigation_Flag__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Litigation Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Paper_File__c</fullName>
        <description>Physical Location of Paper File</description>
        <label>Location of Paper File</label>
        <picklist>
            <picklistValues>
                <fullName>In-House Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Defense Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary/Local Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plaintiff_Attorney_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plaintiff Attorney Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Litigation (Plaintiff Attorney Name)</relationshipLabel>
        <relationshipName>Matters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plaintiff_Firm_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plaintiff Firm Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Litigation (Plaintiff Firm Name)</relationshipLabel>
        <relationshipName>Matters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Paid__c</fullName>
        <label>Settlement Paid</label>
        <summarizedField>Litigation_Transaction__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Litigation_Transaction__c.Payment_Type__c</field>
            <operation>equals</operation>
            <value>Settlement</value>
        </summaryFilterItems>
        <summaryForeignKey>Litigation_Transaction__c.Litigation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjudicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suit_Date__c</fullName>
        <label>Suit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <label>Total Paid</label>
        <summarizedField>Litigation_Transaction__c.Payment_Amount__c</summarizedField>
        <summaryForeignKey>Litigation_Transaction__c.Litigation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Automobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sexual Harassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers&apos; Compensation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verdict__c</fullName>
        <label>Verdict</label>
        <picklist>
            <picklistValues>
                <fullName>JURY TRIAL VERDICT - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENCH TRIAL VERDICT - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JURY TRIAL VERDICT - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENCH TRIAL VERDICT - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUMMARY JUDGMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEFAULT JUDGMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARBITRATION AWARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGREED JUDGMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STIPULATED DISMISSAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISMISS FOR LACK OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSFER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIRECTED VERDICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SETTLED AFTER JURY V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER DISPOSITION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SETTLED AFTER BENCH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Litigation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Litigation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Litigation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>